# v2

Afleveringer/Aflevering 4/: README.md
Afleveringer/Aflevering 4/src/: CMakeLists.txt  handin4.c  playing_cards.c  playing_cards.h
Afleveringer/Aflevering 5/: CMakeLists.txt  README.md
Afleveringer/Aflevering 5/src/: CMakeLists.txt  palindrome.c  palindrome.h
Afleveringer/Aflevering 5/test/: CMakeLists.txt  test_palindrome.c
Lektion 10/: README.md  exercise-12.2.c  exercise-12.3.c  exercise-12.5.c  exercise-PSPDC-607-1.c  exercise-PSPDC-640-3.c
Lektion 10/lecture-10-live-Palulsendk-main/: CMakeLists.txt  README.md
Lektion 10/lecture-10-live-Palulsendk-main/src/: CMakeLists.txt  car.c  cars  planet.c  scratch.c
Lektion 11/: README.md  exercise-10.2.c  exercise-11.1.c  exercise-11.3.c  exercise-11.5.c  exercise-PSPDC-587-1.c  exercise-PSPDC-588-3.c
Lektion 11/lecture-11-live-Palulsendk-main/: CMakeLists.txt  README.md
Lektion 11/lecture-11-live-Palulsendk-main/src/: CMakeLists.txt  calculator.c  polish_calculator.c  polish_calculator.h  rec_array.c  scratch.c
Lektion 11/lecture-11-live-Palulsendk-main/test/: CMakeLists.txt  test_calculator.c
Lektion 12/: README.md  exercise-13.1.c  exercise-13.2.c  exercise-13.3.c  exercise-13.4.c  exercise-13.5.c
Lektion 12/Live/: CMakeLists.txt  README.md  cars.txt  planets.txt
Lektion 12/Live/src/: CMakeLists.txt  car.c  planets.c
Lektion 13/: README.md  exercise-12.6.c  exercise-12.7.c  exercise-12.8.c
Lektion 13/lecture-13-live-Palulsendk-main/: CMakeLists.txt  README.md
Lektion 13/lecture-13-live-Palulsendk-main/src/: CMakeLists.txt  list_cashier.c  live.c  tree_cashier.c
Lektion 2/Live/: CMakeLists.txt  README.md
Lektion 2/Live/src/: CMakeLists.txt  increment_operators.c  main.c  miles_to_km.c  miles_to_km_fejl.c  miles_to_km_rod.c
Lektion 3/: README.md  exercise-3.1.c  exercise-3.2.c  exercise-3.5.c  exercise-PSPDC-205-1.c  exercise-PSPDC-205-2.c  exercise-PSPDC-242-P1.c  exercise-PSPDC-252-6.c  rock-paper-scissors(live).c
Lektion 3/IMPR-Lecture-3-live-main/: CMakeLists.txt  README.md
Lektion 3/IMPR-Lecture-3-live-main/IMPR-Lecture-9-live/: README.md
Lektion 3/IMPR-Lecture-3-live-main/IMPR-Lecture-9-live/src/: args.c  fun_with_strings_backup.c  strcat_problem.c
Lektion 3/IMPR-Lecture-3-live-main/IMPR-Lecture-9-live/test/: test_fun.c
Lektion 3/IMPR-Lecture-3-live-main/src/: CMakeLists.txt
Lektion 4/: README.md  exercise-4.1.c  exercise-4.2.c  exercise-4.3.c  exercise-PSPDC-267-1.c  exercise-PSPDC-275-1.c  exercise-PSPDC-281-1.c  exercise-PSPDC-292-P2.c
Lektion 4/IMPR-Lecture-4-live-main/: CMakeLists.txt  README.md
Lektion 4/IMPR-Lecture-4-live-main/src/: CMakeLists.txt  guess.c  omvendt.c  trekant.c
Lektion 4/Live/: firkant.c  live.c
Lektion 5/: README.md  exercise-5.7.c
Lektion 5/IMPR-Lecture-5-live-main/: CMakeLists.txt  README.md
Lektion 5/Live/: CMakeLists.txt  cirkel.c  live.c  trekant.c
Lektion 6/: README.md  exercise-5.3.c  exercise-6.1.c  exercise-6.2.c  exercise-6.3.c  exercise-6.4.c  exercise-6.6.c  exercise-PSPDC-391-7.c
Lektion 6/IMPR-Lecture-6-live-main/: CMakeLists.txt  LICENSE  README.md
Lektion 6/IMPR-Lecture-6-live-main/src/: CMakeLists.txt
Lektion 6/Live/: live.c  trekant.c
Lektion 7/: README.md  exercise-9.3.c  exercise-9.4.c  exercise-9.5.c
Lektion 7/IMPR-Lecture-7-Live-main/: CMakeLists.txt
Lektion 7/Live/: CMakeLists.txt  cashier.c  dynamic_cashier.c
Lektion 8/: README.md  menu.c  point_distance.c  point_distance.h  time_calc.h
Lektion 8/IMPR-Lecture-8-live-main/: .gitignore  CMakeLists.txt  README.md
Lektion 8/IMPR-Lecture-8-live-main/rps/: CMakeLists.txt  README.md
Lektion 8/IMPR-Lecture-8-live-main/rps/src/: CMakeLists.txt  rock_paper_scissor.c  rps_2player.c  rps_ai.c
Lektion 8/IMPR-Lecture-8-live-main/rps/src/include/: rock_paper_scissor.h
Lektion 8/IMPR-Lecture-8-live-main/rps/test/: CMakeLists.txt  test_rock_paper_scissor.c
Lektion 8/IMPR-Lecture-8-live-main/test/: CMakeLists.txt  test_planets.c
Lektion 8/Live/src/: CMakeLists.txt  main_A.c  planets.c  planets.h  rock_paper_scissor_enum.c  rock_paper_scissor_live.c
Lektion 8/test/: CMakeLists.txt  test_point_distance_2d.c  test_point_distance_nd.c  unittest_point_distance.c
Lektion 9/: README.md  exercise-10.1.c  exercise-10.3.c  exercise-10.4.c  exercise-9.9.c  exercise-PSPDC-490-2.c
Lektion 9/IMPR-Lecture-9-live/: .gitignore  CMakeLists.txt
Lektion 9/IMPR-Lecture-9-live/src/: CMakeLists.txt  count.c  fun_with_strings.c  fun_with_strings.h  replace_exe.c  scratch.c
Lektion 9/IMPR-Lecture-9-live/test/: CMakeLists.txt
